@@ -7,7 +7,7 @@ $date = localtime();
 print <<"END_OUTPUT";
 #ifndef MK1MF_BUILD
     /* auto-generated by util/mkbuildinf.pl for crypto/cversion.c */
-    #define CFLAGS
+    #define CFLAGS cflags
     /*
      * Generate CFLAGS as an array of individual characters. This is a
      * workaround for the situation where CFLAGS gets too long for a C90 string
